@@ -10,8 +10,10 @@ import org.newdawn.slick.GameContainer;
 import org.newdawn.slick.Graphics;
 import ru.game.aurora.application.Camera;
 import ru.game.aurora.application.ResourceManager;
+import ru.game.aurora.dialog.Dialog;
+import ru.game.aurora.dialog.Reply;
+import ru.game.aurora.dialog.Statement;
 import ru.game.aurora.gui.ProgressDumpScreen;
-import ru.game.aurora.npc.Dialog;
 import ru.game.aurora.player.earth.EarthResearch;
 import ru.game.aurora.player.earth.EarthScreen;
 import ru.game.aurora.player.research.ResearchProjectDesc;
@@ -68,7 +70,7 @@ public class Earth extends Planet
                 // player has chosen to dump research info
 
                 int daysPassed = world.getTurnCount() - lastVisitTurn;
-                Dialog.Statement stmt;
+                Statement stmt;
 
                 if (daysPassed > 50) {
                     // show research screen
@@ -83,21 +85,21 @@ public class Earth extends Planet
 
                     int totalScore = dumpResearch(world);
                     double scorePerTurn = (double) totalScore / (daysPassed);
-                    stmt = new Dialog.Statement(0, String.format("Let us see. You have brought us new %d points of data, giving %f points/day", totalScore, scorePerTurn), new Dialog.Reply(0, 0, ""));
+                    stmt = new Statement(0, String.format("Let us see. You have brought us new %d points of data, giving %f points/day", totalScore, scorePerTurn), new Reply(0, 0, ""));
 
                     if (scorePerTurn < 0.001) {
                         // unsatisfactory
-                        stmt.replies[0] = new Dialog.Reply(0, 3, "=continue=");
+                        stmt.replies[0] = new Reply(0, 3, "=continue=");
                     } else if (scorePerTurn < 0.01) {
                         // poor
-                        stmt.replies[0] = new Dialog.Reply(0, 2, "=continue=");
+                        stmt.replies[0] = new Reply(0, 2, "=continue=");
                     } else {
                         // ok
-                        stmt.replies[0] = new Dialog.Reply(0, 1, "=continue=");
+                        stmt.replies[0] = new Reply(0, 1, "=continue=");
                     }
                     lastVisitTurn = world.getTurnCount();
                 } else {
-                    stmt = new Dialog.Statement(0, "We are pleased to see you come back, but your flight was too short to judge your perfomance. Come back later after you have acquired more data", new Dialog.Reply(0, -1, "Ok"));
+                    stmt = new Statement(0, "We are pleased to see you come back, but your flight was too short to judge your perfomance. Come back later after you have acquired more data", new Reply(0, -1, "Ok"));
                 }
                 progressDialog.putStatement(stmt);
                 world.addOverlayWindow(progressDialog);
